Stop name from overflowing in chat box

--- a/client/components/Room/Room.css
+++ b/client/components/Room/Room.css
@@ -138,6 +138,10 @@
 
 .messageUser {
   color: #2756b1;
+  max-width:80px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .messageContent {
